--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,55 @@ Body {
 }
 
 /* Header */
+
+Header {
+  background-color: #204361;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav {
+  display: none;
+}
+
+#hamburger-menu {
+  display: none;
+}
+
+.nav-container {
+  position: relative;
+}
+
+.nav-container label {
+  padding: 20px;
+}
+
+nav {
+  position: absolute;
+  right: 0px;
+  z-index: 1;
+  background: #fff;
+  top: 55px;
+}
+
+#hamburger-menu:checked ~ nav {
+  display: block;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav li {
+  display: inline;
+  padding: 0 10px;
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: #0b3b59;
+}
