--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+/* Opening Content */
+
 .opening {
   background-image: url(/images/pexels-jonathan-cooper-9660891.jpg);
   background-size: cover;
@@ -12,3 +14,5 @@
 p {
   color: #fff;
 }
+
+/* Overview Content */
