--- a/css/index.css
+++ b/css/index.css
@@ -16,3 +16,13 @@ p {
 }
 
 /* Overview Content */
+
+.content-overview {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-overview img {
+  min-width: 380px;
+  max-height: 200px;
+}
