--- a/css/index.css
+++ b/css/index.css
@@ -20,11 +20,18 @@ p {
 .content-overview {
   display: flex;
   flex-direction: column;
-  margin: 15px;
+  margin: 10px;
+}
+
+.content-overview a {
+  text-transform: uppercase;
+  color: #fff;
 }
 
 .content-img {
   background-size: cover;
+  background-color: black;
+  opacity: 0.8;
   background-repeat: no-repeat;
   min-height: 200px;
   position: relative;
