--- a/css/media.css
+++ b/css/media.css
@@ -58,7 +58,7 @@
     min-height: 573px;
   }
 
-  /* .opening .overlay {
+  .opening .overlay {
     align-items: flex-start;
     padding-left: 20px;
     justify-content: center;
@@ -69,7 +69,7 @@
     flex-direction: column;
     align-items: flex-start;
     margin: 10px 20px;
-  } */
+  }
 
   .cta {
     transition-duration: 0.4s;
