--- a/css/media.css
+++ b/css/media.css
@@ -23,7 +23,6 @@
 
   .opening .overlay {
     align-items: flex-start;
-    padding-left: 20px;
     justify-content: center;
   }
 
@@ -40,11 +39,6 @@
     margin: 0;
     flex-wrap: wrap;
   }
-
-  .content-img {
-    min-width: 350px;
-    margin: 10px auto;
-  }
 }
 
 /* From Screen Size 1000px */
@@ -55,10 +49,10 @@
   }
 
   .opening {
-    min-height: 573px;
+    min-height: 550px;
   }
 
-  .opening .overlay {
+  /* .opening .overlay {
     align-items: flex-start;
     padding-left: 20px;
     justify-content: center;
@@ -69,7 +63,7 @@
     flex-direction: column;
     align-items: flex-start;
     margin: 10px 20px;
-  }
+  } */
 
   .cta {
     transition-duration: 0.4s;
@@ -82,12 +76,12 @@
   .content-overview {
     display: flex;
     flex-direction: row;
-    margin: 10px;
     flex-wrap: wrap;
   }
 
   .content-img {
-    min-width: 400px;
-    margin: 20px auto;
+    flex: 1 1 600px;
+    margin-top: 50px;
+    gap: 50px;
   }
 }
