--- a/css/media.css
+++ b/css/media.css
@@ -33,17 +33,16 @@
     margin: 10px 20px;
   }
 
-  /* .content-overview {
+  .content-overview {
     display: flex;
     flex-direction: row;
-    margin: 0;
+    margin-top: 15px;
     flex-wrap: wrap;
-  } */
+    gap: 15px;
+  }
 
   .content-img {
-    flex: 1 1 400px;
-    margin-top: 50px;
-    gap: 50px;
+    flex: 1 1 300px;
   }
 }
 
@@ -55,21 +54,8 @@
   }
 
   .opening {
-    min-height: 550px;
+    min-height: 250px;
   }
-
-  /* .opening .overlay {
-    align-items: flex-start;
-    padding-left: 20px;
-    justify-content: center;
-  }
-
-  .overlay-text {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 10px 20px;
-  } */
 
   .cta {
     transition-duration: 0.4s;
@@ -83,11 +69,21 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin: 25px 40px 0px 40px;
+    gap: 25px;
   }
 
   .content-img {
-    flex: 1 1 600px;
-    margin-top: 50px;
-    gap: 50px;
+    flex: 1 1 350px;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .opening {
+    min-height: 250px;
+  }
+
+  .content-img {
+    flex: 1 1 450px;
   }
 }
