--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ nav {
   right: 0px;
   z-index: 1;
   background: #fff;
-  top: 55px;
+  top: 30px;
 }
 
 #hamburger-menu:checked ~ nav {
@@ -89,10 +89,10 @@ nav {
 
 nav ul {
   list-style-type: none;
+  padding-left: 10px;
 }
 
 nav li {
-  display: inline;
   padding: 0 10px;
   font-size: 20px;
 }
