--- a/css/media.css
+++ b/css/media.css
@@ -7,7 +7,7 @@
   }
 
   .logo {
-    margin-bottom: 15px;
+    margin: 0px 0px 15px 15px;
     font-size: 18px;
   }
 
@@ -61,10 +61,11 @@
 @media only screen and (min-width: 900px) {
   header {
     min-height: 100px;
+    padding: 20px 20px 5px;
   }
 
   .logo {
-    margin-bottom: 20px;
+    margin: 0px 0px 45px 20px;
     font-size: 24px;
   }
 
