--- a/css/media.css
+++ b/css/media.css
@@ -101,6 +101,10 @@
 }
 
 @media only screen and (min-width: 1600px) {
+  nav a {
+    font-size: 24px;
+  }
+
   .opening {
     min-height: 300px;
   }
