--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,26 @@
 body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  padding: 20px;
+  /* padding: 20px; */
   font-size: 16px;
   position: relative;
   min-height: 100vh;
+  margin: 0px;
 }
 
-.home-page-body {
+/* .home-page-body {
   margin: 0;
   padding: 0;
+} */
+
+main {
+  padding: 20px;
+  margin: 10px;
+}
+
+.index-main {
+  padding: 0px;
+  margin: 0px;
 }
 
 .cta {
