--- a/css/explore.css
+++ b/css/explore.css
@@ -3,8 +3,14 @@ h1 {
   text-align: center;
 }
 
-/* header {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-} */
+.img-flex {
+  display: flex;
+  gap: 20px;
+  justify-content: space-evenly;
+}
+
+.img-flex img {
+  /* flex: 1 1 200px; */
+  max-width: 100px;
+  height: auto;
+}
