Done with exhibitions page

--- a/css/exhibitions.css
+++ b/css/exhibitions.css
@@ -22,9 +22,13 @@ h1 {
 }
 
 h2 {
-  margin: 5px;
+  margin: 5px 5px 10px 5px;
 }
 
 p {
   margin: 5px 5px 10px;
+}
+
+.temporary {
+  font-style: italic;
 }
