--- a/css/get_involved.css
+++ b/css/get_involved.css
@@ -1,3 +1,13 @@
 .get-involved {
   margin: 60px auto;
+  max-width: 700px;
+}
+
+.get-invovled-info {
+  margin: 60px auto;
+}
+
+.contact-cta {
+  text-align: center;
+  /* display: block; */
 }
