--- a/css/exhibitions.css
+++ b/css/exhibitions.css
@@ -3,12 +3,13 @@
   flex-wrap: wrap;
   padding: 0px 20px;
   margin: 60px auto;
+  justify-content: space-evenly;
 }
 
 .exhibitions-info-box {
   max-width: 450px;
   border: 1px solid #204361;
-  margin: 20px auto;
+  margin: 25px;
 }
 
 .exhibitions img {
