--- a/css/media.css
+++ b/css/media.css
@@ -44,13 +44,25 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 10px 45px;
+    /* margin: 10px 45px; */
+  }
+
+  .opening .overlay-text {
+    margin: 45px;
+  }
+
+  .overlay-text h1 {
+    font-size: 28px;
+  }
+
+  .opening .cta {
+    margin-left: 45px;
   }
 
   .content-overview {
     display: flex;
     flex-direction: row;
-    margin-top: 15px;
+    margin: 25px;
     flex-wrap: wrap;
     gap: 15px;
   }
@@ -60,7 +72,7 @@
   }
 }
 
-/* From Screen Size 1000px */
+/* From Screen Size 900px */
 
 @media only screen and (min-width: 900px) {
   header {
@@ -88,19 +100,35 @@
   }
 
   .cta:hover {
-    background-color: #106497;
+    background-color: #204361;
+  }
+
+  .overlay-text a {
+    font-size: 2em;
   }
 
   .content-overview {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 25px 40px 0px 40px;
+    margin: 40px;
     gap: 25px;
   }
 
   .content-img {
     flex: 1 1 350px;
+    min-height: 300px;
+  }
+
+  .get-involved {
+    background-position-y: 50%;
+    background-position-x: 20%;
+  }
+
+  /*Visit & Contact*/
+
+  .contact-page h1 {
+    margin-bottom: 50px;
   }
 }
 
@@ -112,7 +140,11 @@
   /* INDEX*/
 
   .opening {
-    min-height: 300px;
+    min-height: 350px;
+  }
+
+  .content-overview {
+    margin: 65px;
   }
 
   .content-img {
