CHanged margin to visit us section in footer Changed line height between contnt list again

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,12 +141,16 @@ footer a {
   display: flex;
 }
 
+.visit-us:first-child {
+  margin-bottom: 5px;
+}
+
 .social-media > * {
   margin-right: 10px;
 }
 
 .content-list p {
-  line-height: 20px;
+  line-height: 15px;
   text-transform: uppercase;
 }
 
