--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fjord+One&family=Montserrat:wght@700&display=swap");
 
 body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -60,6 +61,9 @@ Header {
 
 .logo a {
   color: #fff;
+  font-family: "Fjord One", "Montserrat", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-weight: bolder;
 }
 
 .wrap-span {
@@ -109,7 +113,7 @@ nav ul {
 }
 
 nav li {
-  padding: 0 10px;
+  padding: 5px 10px;
   font-size: 20px;
 }
 
