--- a/css/visit.css
+++ b/css/visit.css
@@ -28,8 +28,9 @@ h2 {
   margin: 100px auto;
 }
 
-.contact-page h1 {
-  margin-bottom: 35px;
+.contact-page h2 {
+  margin-bottom: 45px;
+  text-align: center;
 }
 
 input,
