--- a/css/styles.css
+++ b/css/styles.css
@@ -145,8 +145,8 @@ footer a {
   display: flex;
 }
 
-.visit-us:first-child {
-  margin-bottom: 5px;
+.visit-us p {
+  line-height: 10px;
 }
 
 .social-media > * {
