Added wrap span to visit address in footer so it woulnd't expand all the way across

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,9 +145,9 @@ footer a {
   display: flex;
 }
 
-.visit-us p {
+/* .visit-us p {
   line-height: 10px;
-}
+} */
 
 .social-media > * {
   margin-right: 10px;
