Changed color for li elements in nav bar in moblie version pluss background color from white to blue

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ nav {
   position: absolute;
   right: 0px;
   z-index: 1;
-  background: #fff;
+  background: #204361;
   top: 30px;
 }
 
@@ -119,7 +119,10 @@ nav li {
 
 a {
   text-decoration: none;
-  color: #204361;
+}
+
+nav a {
+  color: #fff;
 }
 
 /* Footer */
