--- a/css/styles.css
+++ b/css/styles.css
@@ -148,16 +148,19 @@ footer a {
   display: flex;
 }
 
-/* .visit-us p {
-  line-height: 10px;
-} */
+.visit-us p {
+  margin: 0px;
+}
+
+.visit-us {
+  margin-bottom: 10px;
+}
 
 .social-media > * {
   margin-right: 10px;
 }
 
 .content-list p {
-  /* line-height: 15px; */
   text-transform: uppercase;
 }
 
