--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ footer a {
 }
 
 .visit-us {
-  margin: 0px 0px 10px 5px;
+  margin-bottom: 10px;
 }
 
 .social-media > * {
@@ -162,6 +162,7 @@ footer a {
 
 .content-list p {
   text-transform: uppercase;
+  margin: 10px 0px;
 }
 
 .sign-up {
