--- a/css/explore.css
+++ b/css/explore.css
@@ -1,10 +1,11 @@
 .categories {
-  max-width: 900px;
+  max-width: 700px;
   margin: 60px auto;
+  padding: 0px 5px;
 }
 
 .description {
-  margin: 80px auto;
+  margin-bottom: 60px;
 }
 
 .img-flex {
