--- a/css/get_involved.css
+++ b/css/get_involved.css
@@ -1,8 +1,13 @@
 .get-involved {
   margin: 60px auto;
+  padding: 0px 5px;
   max-width: 700px;
 }
 
 .get-invovled-info {
-  margin: 60px auto;
+  margin-bottom: 60px;
+}
+
+.contact-cta {
+  margin-top: 100px;
 }
