--- a/css/visit.css
+++ b/css/visit.css
@@ -4,20 +4,28 @@
 }
 
 .map {
-  position: relative;
-  text-align: right;
   height: 400px;
   max-width: 700px;
   min-width: 300px;
+}
+
+#gmap_canvas {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 .hours p {
   line-height: 5px;
 }
 
-.bold {
+.hours span {
   font-weight: bold;
 }
+
+/* .bold {
+  
+} */
 
 h2 {
   margin-top: 50px;
@@ -40,10 +48,6 @@ textarea {
   border-radius: 5px;
   margin: 10px 10px 10px 0px;
   padding: 10px;
-}
-
-.button input {
-  border: none;
 }
 
 .form-wrapper {
