--- a/css/index.css
+++ b/css/index.css
@@ -56,6 +56,8 @@
   text-transform: uppercase;
   color: #fff;
   font-size: 1.5em;
+  font-weight: bold;
+  background: rgba(32, 67, 97, 0.3);
 }
 
 .cta a {
@@ -122,7 +124,7 @@
   margin: 70px auto;
   padding: 30px;
   background: #fff;
-  border: 1px solid #0b3b59;
+  border: 1px solid #204361;
   width: 50%;
 }
 
